--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@
 	--light-grayish-blue-2: hsl(205, 33%, 90%);
 	--very-dark-blue: hsl(224, 21%, 14%);
 	--blue: #0b3778;
+	--red: #ff453f;
 	--very-light-grayish-blue: hsl(210, 60%, 98%);
 	--white: hsl(0, 0%, 100%);
 	--text-medium: 500;
