--- a/src/components/NotificationItem/styles.css
+++ b/src/components/NotificationItem/styles.css
@@ -18,9 +18,9 @@
 	display: inline-block;
 	visibility: hidden;
 	flex-shrink: 0;
-	margin-bottom: 2px;
 	height: 8px;
 	width: 8px;
+	margin-left: 6px;
 }
 
 .notification-item.unread .unread-mark {
@@ -68,8 +68,7 @@
 }
 
 .notification-item .author-name {
-	margin-right: 8px;
-	font-size: 14px;
+	margin-right: 6px;
 }
 
 .notification-item .action-message {
@@ -77,7 +76,7 @@
 	font-weight: var(--text-medium);
 	line-height: 1.2;
 	font-size: 16px;
-	margin-right: 6px;
+	font-size: 14px;
 }
 
 .notification-item .timestamp {
@@ -97,8 +96,7 @@
 		margin-top: 6px;
 	}
 
-	.notification-item .author-name {
-		margin-right: 8px;
+	.notification-item .action-message {
 		font-size: 16px;
 	}
 }
