--- a/src/components/NotificationsPage/styles.css
+++ b/src/components/NotificationsPage/styles.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
-	padding: 24px 16px;
+	padding: 24px 4px;
 	width: 100%;
 }
 
@@ -11,6 +11,7 @@
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 24px;
+	padding: 0 12px;
 }
 
 .mark-read-btn,
@@ -48,7 +49,7 @@
 .notifications-list {
 	overflow-y: auto;
 	height: calc(100vh - 100px);
-	padding-right: 8px;
+	padding: 0 8px;
 }
 
 .notifications-list > *:not(:last-child) {
@@ -60,7 +61,7 @@
 		height: auto;
 		max-width: 736px;
 		border-radius: 12px;
-		padding: 42px 32px;
+		padding: 42px 28px;
 		box-shadow: rgba(149, 157, 165, 0.1) 0px 8px 24px;
 	}
 
