--- a/src/components/NotificationItem/styles.css
+++ b/src/components/NotificationItem/styles.css
@@ -87,6 +87,11 @@
 	font-size: 14px;
 }
 
+.notification-content {
+	margin-top: 12px;
+	padding-left: 54px;
+}
+
 @media screen and (min-width: 768px) {
 	.notification .avatar {
 		height: 42px;
